--- a/src/components/userAccount/userAccount.css
+++ b/src/components/userAccount/userAccount.css
@@ -1,100 +1,134 @@
-.imageNName{
+.imageNName {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     position: relative;
-    
-    
+
+
 }
- 
-.userAcountMainDiv{
+
+.userAcountMainDiv {
     display: grid;
-    grid-template-columns:  250px auto  ;
-    height: 100vh; 
-  }
-   
- 
-.ProfileImg{
+    grid-template-columns: 250px auto;
+    height: 100vh;
+}
+
+
+.ProfileImg {
     height: 250px;
     width: 250px;
-    border-radius: 50%; 
-    
+    border-radius: 50%;
+
 }
-.imgDiv{
+
+.imgDiv {
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     height: 250px;
     width: 250px;
-    border-radius: 50%; 
+    border-radius: 50%;
     -webkit-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.709);
--moz-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.662);
-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.644);
+    -moz-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.662);
+    box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.644);
 }
-.div786565{
-    margin: 20px 15px ;
+
+.div786565 {
+    margin: 20px 15px;
     background-color: white;
     border-radius: 25px;
     padding: 15px;
 }
- 
-@media only screen and (max-width: 768px){
-    .imgDiv{
+
+@media only screen and (max-width: 768px) {
+    .imgDiv {
         width: 50vw;
-        height:50vw;
+        height: 50vw;
         position: relative;
         top: 20vw;
         z-index: 2;
-        border:2px solid rgb(245, 245, 245);
-         
-    }
-    .ProfileImg{
-        width: 50vw;
-        height:50vw;
-       
+        border: 2px solid rgb(245, 245, 245);
 
     }
-    .imageNName{
-        
+
+    .ProfileImg {
+        width: 50vw;
+        height: 50vw;
+
+
+    }
+
+    .imageNName {
+
         flex-direction: row;
         justify-content: first baseline;
         margin-top: 20px;
         gap: 15px;
 
     }
-    .imageNName>div:nth-child(2){
-        
-         font-size: 19px;
+
+    .imageNName>div:nth-child(2) {
+
+        font-size: 19px;
         font-weight: bolder;
 
     }
-     
-    
-    #enNumber{
-         text-align: center;
+
+
+    #enNumber {
+        text-align: center;
     }
-    #ContentCopyIcon{
+
+    #ContentCopyIcon {
         font-size: 16px;
         padding-top: 2px;
     }
-    .fakeDiv_userDetail{
+
+    .fakeDiv_userDetail {
         height: 250px;
     }
-    .profileInfoDiv>button{
-margin-top: 20px;
+
+    .profileInfoDiv>button {
+        margin-top: 20px;
     }
-    .profileInfoDiv{
-        padding-top: 25vw;
-       
+
+    .profileInfoDiv {
+        padding-top: 20vw;
+        overflow-y: hidden;
+        border-radius: 10px 10px 0 0;
+
     }
-    .div486623{
+
+    .profileInfoDiv2ed {
+  background-color: rgba(148, 148, 148, 0.204);
+        
+        border-radius: 0 0 10px 10px;
+        padding:7px;
+
+    }
+
+    .div486623 {
         margin-top: -10px;
-       
+
     }
-    .div486623 h3{
-           margin-top: 20px; 
-           margin-bottom: 10px; 
+
+    .div486623 h3 {
+        margin-top: 20px;
+        margin-bottom: 10px;
 
     }
 }
+
+
+.heightAuto {
+    height: 500px;
+    transition: all 0.5s;
+}
+
+.shrinkHeight {
+    height: 195px;
+    transition: all 0.5s;
+}
+
+ 
