--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .boxShodow {
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.36);
-  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.36);
-  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.36);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.36);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.36);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.36);
 
   border-radius: 10px;
 
@@ -550,8 +550,23 @@ margin: 0;
   -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px); 
 }
-.blur {
+.blur3{
+  background-color: rgba(0, 0, 0, 0.054);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); 
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+}
+.blur4{
+  background-color: rgba(255, 255, 255, 0.611);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); 
+  
+}
 
+ 
+
+.blur { 
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
@@ -568,6 +583,10 @@ margin: 0;
 }
 .border_radius15{
   border-radius: 15px;
+}
+.border_radius50{
+  border-radius: 50%;
+
 }
 
 .pointer{
