--- a/src/components/userAccount/userAccount.css
+++ b/src/components/userAccount/userAccount.css
@@ -29,9 +29,7 @@
     height: 250px;
     width: 250px;
     border-radius: 50%;
-    -webkit-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.709);
-    -moz-box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.662);
-    box-shadow: 0px 0px 111px -33px rgba(137, 43, 226, 0.644);
+    
 }
 
 .div786565 {
@@ -101,7 +99,6 @@
     }
 
     .profileInfoDiv2ed {
-  background-color: rgba(148, 148, 148, 0.204);
         
         border-radius: 0 0 10px 10px;
         padding:7px;
@@ -131,4 +128,63 @@
     transition: all 0.5s;
 }
 
- 
+.floadingOBJ1{
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    background-color: rgba(102, 0, 255, 0.177);
+    z-index: -1;
+    top: 180px;
+    left: 10px; 
+    box-shadow: -1px 0px 96px 16px rgba(102, 0, 255, 0.344);
+-webkit-box-shadow: -1px 0px 96px 16px rgba(102, 0, 255, 0.344);
+-moz-box-shadow: -1px 0px 96px 16px rgba(102, 0, 255, 0.344);
+}
+
+.floadingOBJ2{
+    position: absolute;
+    width: 75px;
+    height: 75px;
+    background-color: rgba(255, 115, 0, 0.166);
+    z-index: -1;
+    top: 230px;
+    right: 0; 
+    box-shadow: -1px 0px 96px 16px rgba(255, 115, 0, 0.391);
+-webkit-box-shadow: -1px 0px 96px 16px rgba(255, 115, 0, 0.391);
+-moz-box-shadow: -1px 0px 96px 16px rgba(255, 115, 0, 0.391);
+}
+
+.floadingOBJ3{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 255, 42, 0.113);
+    z-index: -1;
+    bottom: 200px;
+    left: 100px; 
+    box-shadow: -1px 0px 96px 16px rgba(0, 255, 42, 0.391);
+-webkit-box-shadow: -1px 0px 96px 16px rgba(0, 255, 42, 0.391);
+-moz-box-shadow: -1px 0px 96px 16px rgba(0, 255, 42, 0.391);
+}
+
+.floadingOBJ4{
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    background-color: rgba(255, 0, 128, 0.116);
+    z-index: -1;
+    top: 400px;
+    right: 30px;
+    box-shadow: -1px 0px 96px 16px rgba(255, 0, 128, 0.34);
+-webkit-box-shadow: -1px 0px 96px 16px rgba(255, 0, 128, 0.34);
+-moz-box-shadow: -1px 0px 96px 16px rgba(255, 0, 128, 0.34);
+}
+.borderBotton-none{
+    border-bottom: none;
+}
+.borderTop-none{
+    border-top: none;
+}
+.textBtnColro{
+    color: rgba(0, 0, 255, 0.814);
+}
