--- a/src/components/home/homePage.css
+++ b/src/components/home/homePage.css
@@ -1,24 +1,86 @@
- body{
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Inter:wght@500&family=Libre+Franklin&family=Poppins&display=swap');
+body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
  }
  
+.contentdiv{
+   padding: 40px;
+   box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+
+
+}
+.contentdiv>h1{
+   font-size: 50px;
+   margin-bottom: 0;
+   color: rgb(86, 0, 166);font-family: 'Libre Franklin', sans-serif;
+}
+.contentdiv>h3{
+   margin-bottom: 0px;
+   color: rgb(255, 255, 255);
+   font-family: 'Libre Franklin', sans-serif;
+   text-align: center;
+  padding: 20px;
+   background-color: rgb(86, 0, 166);
+}
+ 
+ 
+  .lineHR{
+   height: 3px;
+   flex: 1;
+   margin-top: 20px;
+ }
+
+.contentdiv>h4{
+   margin-bottom: 5px;
+}
+.contentdiv>p{
+   font-size: 16px;
+   width: 800px;
+   color: rgba(0, 0, 0, 0.866);
+   font-family: 'Inter', sans-serif;
+
+   
+}
+.credDiv{
+   border: 1px solid blueviolet;
+   border-radius: 5px;
+   padding: 5px 20px;
+   width: 270px;
+   background-color: rgba(132, 0, 255, 0.139);
+   
+}
+
+ 
+.subTitile{
+   color: rgba(0, 0, 0, 0.599);
+   font-family: 'Inter', sans-serif;
+
+}
+
+ 
+
+ .iframe{
+   position: fixed;
+   margin-top: 30px;
+   width: 360px;
+   height: 90vh;
+   border-radius: 25px;
+   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+
+ }
 
  .langing_page{
-    background-color: rgba(0, 0, 0, 0);
-    width: 100vw;
-    height: 100vh;
-    color: rgb(0, 0, 0);
-    overflow-x: hidden;
-    overflow-y: scroll;
+   display: grid;
+   grid-template-columns: 1fr 500px;
+   grid-row-gap: 0px; 
+   width: 100vw;
+   height: 100vh;
+  overflow-x: hidden;
     
  }
- .langing_page>div>h1{
-   font-weight: bolder;
-   color: rgba(0, 0, 0, 0.992);
-     
- }
+  
  .langingBTN{
     width: auto;
  }
@@ -40,81 +102,39 @@
    justify-content: space-around;
    width: 300px;
 }
-.mouse {
-   width: 30px;
+  
+.patternBG{
+position: fixed;
+z-index: -1;
+right: 0;
+height: 100vh;
+width: 500px;
+
+}
+.credDiv>span:nth-child(1){
+   user-select: auto;
+   -webkit-user-select: auto;
+   -ms-user-select: auto;
+
+   font-family: 'Handjet', cursive;
+   color: rgb(132, 0, 255);
+
+}
+ 
+.mover{
    height: 50px;
-   border: 1px solid #000000;
-   border-radius: 60px;
-   position: relative;
-}
-.mouse::before {
-   content: '';
-   width: 10px;
-   height: 10px;
+   width: 50px;
+   background-color: rgba(0, 255, 21, 0.205);
+   border-radius: 30px;
    position: absolute;
-   top: 30px;
-   left: 50%;
-   transform: translateX(-50%);
-   background-color: #000000;
-   border-radius: 50%;
-   opacity: 1;
-   animation: wheel 2s infinite;
-   -webkit-animation: wheel 2s infinite;
-}
-@keyframes wheel {
-   to {
-      opacity: 0;
-      top: 3px;
-    
-  }
-}
-@-webkit-keyframes wheel {
-   to {
-      opacity: 0;
-      top: 3px;
-      
-  }
-}
-.back{
-
-   position: absolute;
-   height: 100vh;
-   width: 100vw;
-    overflow-x:hidden;
    z-index: -1;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   
-   
-}
-.back>img{
+   animation: mover 40s infinite;
 
-    height: 100vh;
-   width: auto;
+   -webkit-box-shadow: 0px 0px 90px 10px rgb(0, 255, 21);
+-moz-box-shadow: 0px 0px 90px 10px rgb(0, 255, 21);
+box-shadow: 0px 0px 90px 10px rgb(0, 255, 21);
+}
+
+@keyframes mover {
    
-     opacity: .6;
-   
-}
-.z1{
-   position: relative;
-   z-index: 1;
-}
-h1{
-   text-align: center;
-}
-.div4632{
-   height: auto;
-    margin: 10px;
-   border-radius: 0px 10px 10px 10px;
-   padding: 10px;
-   border-bottom: 2px solid rgba(0, 0, 0, 0.36);
- }
-.div4632>h4 {
-   margin: 0;
-   color: #000000d0;
-}
-.div4632>p{
-   margin: 0;
-   font-size: 14px;
 }
