--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,7 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid var(--scrollbarBG);
 }
 
-* {
-  transition: 0.7s all;
-  box-sizing: border-box;
-}
+ 
 
 .boxShodow {
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.36);
@@ -65,6 +62,10 @@ body::-webkit-scrollbar-thumb {
 
   .appName {
     display: none;
+  }
+  .displayNone_mobile{
+    display: none;
+
   }
 
   .toolTiltal {
@@ -436,12 +437,30 @@ margin: 0;
 .margin_10_20 {
   margin: 10px 20px;
 }
+.marginLeftAuto{
+  margin-left: auto;
+}
+.marginRightAuto{
+  margin-right: auto;
+}
 
 .padding_10_20 {
   padding: 10px 20px;
 }
 .padding_5_10 {
   padding: 5px 10px;
+}
+.padding10 {
+  padding: 10px;
+}
+.padding15 {
+  padding: 15px;
+}
+.padding20 {
+  padding: 20px;
+}
+.padding30 {
+  padding: 30px;
 }
 
 .overflow_X {
@@ -476,6 +495,9 @@ margin: 0;
 
 .width100 {
   width: 100px;
+}
+.width100per {
+  width: 100%;
 }
 
 .padding10 {
@@ -520,6 +542,9 @@ margin: 0;
 
 .font_13 {
   font-size: 13px;
+}
+.font_9 {
+  font-size: 9px;
 }
 
 
