--- a/src/components/authentication/auth.css
+++ b/src/components/authentication/auth.css
@@ -2,10 +2,6 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff00;
     position: fixed;
     top: 0%;
     left: 0;
@@ -13,17 +9,13 @@
   }
   
   .LoginSignUpBox {
-    background-color: rgba(0, 0, 0, 0.344);
     width: 25vw;
     height: 70vh;
     min-width: 300px;
     min-height: 500px;
     box-sizing: border-box;
     overflow: hidden;
-    border-radius: 25px;
-    -webkit-box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
--moz-box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
-box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
+    
   }
   .login_signUp_toggle {
     display: flex;
@@ -56,7 +48,6 @@ box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
     flex-direction: column;
     align-items: center;
     margin: auto;
-    padding: 2vmax;
     justify-content: space-evenly;
     height: 70%;
     transition: all 0.5s;
@@ -66,76 +57,17 @@ box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
     transform: translateY(-100%) translateX(-100vmax);
   }
   
-  .loginForm > div,
-  .signUpForm > div {
-    display: flex;
-    width: 100%;
-    align-items: center;
-  }
-  .loginForm > div > input,
-  .signUpForm > div > input {
-    padding: 1vmax 4vmax;
-    padding-right: 1vmax;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.267);
-    border-radius: 4px;
-    font: 300 0.9vmax cursive;
-    outline: none;
-  }
-  
-  .loginForm > div > svg,
-  .signUpForm > div > svg {
-    position: absolute;
-    transform: translateX(1vmax);
-    font-size: 1.6vmax;
-    color: rgba(0, 0, 0, 0.971);
-  }
-  
-  .loginForm > a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    align-self: flex-end;
-    transition: all 0.5s;
-    font: 500 0.8vmax ;
-  }
-  
    
   
-  #registerImage > img {
-    width: 3vmax;
-    border-radius: 100%;
-  }
-  #registerImage > input {
-    display: flex;
-    padding: 0%;
-  }
-  
-  #registerImage > input::file-selector-button {
-    cursor: pointer;
-    width: 100%;
-    z-index: 2;
-    height: 5vh;
-    border: none;
-    margin: 0%;
-    font: 400 0.8vmax cursive;
-    transition: all 0.5s;
-    padding: 0 1vmax;
-    color: rgba(0, 0, 0, 0.936);
-    background-color: rgb(255, 255, 255);
-  }
-  
-  #registerImage > input::file-selector-button:hover {
-    background-color: rgb(235, 235, 235);
-  }
+ 
   
   .loginBtn,
   .signUpBtn {
     border: none;
     background-color: #8a2be2;
-    color: white;
      width: 100%;
     padding: 0.8vmax;
+    color: white;
     cursor: pointer;
     transition: all 0.5s;
     border-radius: 4px;
@@ -181,30 +113,7 @@ box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
       padding: 5vmax;
     }
   
-    .loginForm > div > input,
-    .signUpForm > div > input {
-      padding: 2.5vmax 5vmax;
-      font: 300 1.7vmax cursive;
-    }
-  
-    .loginForm > div > h1,
-    .signUpForm > div > h1 {
-      font-size: 2.8vmax;
-    }
-  
-    .loginForm > a {
-      font: 500 1.8vmax "Gill Sans";
-    }
-  
-    #registerImage > img {
-      width: 8vmax;
-      border-radius: 100%;
-    }
-  
-    #registerImage > input::file-selector-button {
-      height: 7vh;
-      font: 400 1.8vmax cursive;
-    }
+     
   
     .loginBtn,
     .signUpBtn {
@@ -218,7 +127,10 @@ box-shadow: 0px 0px 30px -14px rgba(111,41,158,1);
   justify-content: start;
  }
 
-
+.forgetLink{
+   margin-left: auto;
+   font: 500 2vmax "Gill Sans";
+}
  
  
 
